Fix sms verification Need fix on user check

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Rhino</string>
+    <string name="didnt_get_code">Did not get OTP? <b>Click here to resend</b></string>
 </resources>
